# demo

./: alembic.ini
.github/instructions/: rules.instructions.md
myapp/: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  seed_products.py  seed_users.py
myapp/alembic/: env.py
myapp/alembic/versions/: 2f9d57f8d90a_initial.py
myapp/app/: config.py  main.py  templates_config.py
myapp/app/controllers/: auth_controller.py  cart_controller.py  order_controller.py  product_controller.py
myapp/app/db/: base.py  session.py
myapp/app/exceptions/: domain.py
myapp/app/middleware/: error_handler.py
myapp/app/models/: __init__.py  order.py  order_item.py  product.py  user.py
myapp/app/repositories/: order_repo.py  product_repo.py  user_repo.py
myapp/app/routers/: auth_router.py  cart_router.py  order_router.py  product_router.py
myapp/app/schemas/: cart.py  order.py  product.py  user.py
myapp/app/services/: cart_service.py  order_service.py  product_service.py  user_service.py
myapp/app/static/css/: style.css
myapp/app/templates/: base.html  cart.html  index.html  orders.html  product_detail.html
myapp/app/templates/auth/: login.html  register.html
myapp/app/utils/: cart.py  hashing.py
myapp/tests/integration/: test_checkout.py
