[tool.poetry]
name = "myapp"
version = "0.1.0"
description = "E-commerce Lite"
authors = ["You <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = "^2.0"
psycopg2-binary = "^2.9"
alembic = "^1.13"
jinja2 = "^3.1"
python-multipart = "^0.0.9"
bcrypt = "^4.1"
itsdangerous = "^2.2"
pydantic-settings = "^2.2"

[tool.poetry.dev-dependencies]
pytest = "^8.0"
httpx = "^0.27"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"